--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/clients/new">New Client</a></li>
             </ul>
           </div>
         </div>
@@ -79,6 +80,7 @@
     <script src="bower_components/jquery.cookie/jquery.cookie.js"></script>
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
+    <script src="bower_components/foundation-datepicker/js/foundation-datepicker.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
@@ -86,6 +88,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/clients/new.js"></script>
         <!-- endbuild -->
 </body>
 </html>
