--- a/app/index.html
+++ b/app/index.html
@@ -89,6 +89,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/clients/new.js"></script>
+        <script src="scripts/factories/ajax_factory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
