master : admin clients

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,8 @@
             <ul class="nav navbar-nav">
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
               <li><a ng-href="#/clients/new">New Client</a></li>
+              <li><a ng-href="#/admin/clients">admin - Clients</a></li>
             </ul>
           </div>
         </div>
@@ -89,6 +89,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/client.js"></script>
+        <script src="scripts/controllers/admin/client.js"></script>
         <script src="scripts/factories/client_factory.js"></script>
         <!-- endbuild -->
 </body>
