master : client detail

--- a/app/index.html
+++ b/app/index.html
@@ -35,6 +35,7 @@
               <li class="active"><a href="#/">Home</a></li>
               <li><a ng-href="#/about">About</a></li>
               <li><a ng-href="#/clients/new">New Client</a></li>
+              <li><a ng-href="#/client/1">Current Client</a></li>
               <li><a ng-href="#/admin/clients">admin - Clients</a></li>
             </ul>
           </div>
