--- a/app/index.html
+++ b/app/index.html
@@ -94,6 +94,7 @@
         <script src="scripts/controllers/fe/experiences/index.js"></script>
         <script src="scripts/controllers/fe/experiences/edit.js"></script>
         <script src="scripts/controllers/admin/client.js"></script>
+        <script src="scripts/services/client_service.js"></script>
         <script src="scripts/factories/client_factory.js"></script>
         <script src="scripts/factories/experience_factory.js"></script>
         <!-- endbuild -->
