--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/fe/clients/index.js"></script>
         <script src="scripts/controllers/fe/clients/edit.js"></script>
+        <script src="scripts/controllers/fe/experiences/index.js"></script>
         <script src="scripts/controllers/admin/client.js"></script>
         <script src="scripts/factories/client_factory.js"></script>
         <!-- endbuild -->
