master : add factory to call location

--- a/app/index.html
+++ b/app/index.html
@@ -97,6 +97,7 @@
         <script src="scripts/services/client_service.js"></script>
         <script src="scripts/factories/client_factory.js"></script>
         <script src="scripts/factories/experience_factory.js"></script>
+        <script src="scripts/factories/location_factory.js"></script>
         <!-- endbuild -->
 </body>
 </html>
