--- a/app/index.html
+++ b/app/index.html
@@ -90,6 +90,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/fe/clients/index.js"></script>
+        <script src="scripts/controllers/fe/clients/new.js"></script>
         <script src="scripts/controllers/fe/clients/edit.js"></script>
         <script src="scripts/controllers/fe/experiences/index.js"></script>
         <script src="scripts/controllers/fe/experiences/edit.js"></script>
