master : audee commit

--- a/app/indextest.html
+++ b/app/indextest.html
@@ -22,32 +22,12 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <!-- Add your site or application content here -->
-    <!-- <div class="header">-->
-      <!-- <div class="navbar navbar-default" role="navigation">-->
-       <!--  <div class="container">-->
-          <!-- <div class="navbar-header">-->
-
-            <!-- <a class="navbar-brand" href="#/">gocv</a>-->
-          <!-- </div>-->
-    <!--<div class="main">
-          <nav class="collapse nav">
-
-            <ul class="nav navbar-nav nav-list">
-              <li class="active red nav-item"><a href="#/">Home</a></li>
-              <li class="nav-item"><a ng-href="#/about">Abossut</a></li>
-              <li class="nav-item"><a ng-href="#/clients/new">Newaaa Client</a></li>
-              <li class="nav-item"><a ng-href="#/client/1">Current Client</a></li>
-              <li class="nav-item"><a ng-href="#/admin/clients">admin - Clientssss</a></li>
-            </ul>
-          </nav>
-      </div>-->
 
     <nav class="clearfix">
       <ul class="clearfix">
         <li><a href="#">Home</a></li>
-        <li><a href="#">How-to</a></li>
-        <li><a href="#">Icons</a></li>
+        <li><a href="#">Why-us</a></li>
+        <li><a href="#">Register</a></li>
         <li><a href="#">Design</a></li>
         <li><a href="#">Web 2.0</a></li>
         <li><a href="#">Tools</a></li>
@@ -55,11 +35,65 @@
       <a href="#" id="pull">Menu</a>
     </nav>
 
+<!--body div start-->
+
+    <div class="imgtophost">
+      <div class="imgtopdiv">
+
+        <div class="logotophost" >
+          <img style="position:absolute; bottom:0px" src="../images/logo.png" />
+        </div>
+
+
+      </div>
+    </div>
+
+    <div class="stepshost">
+      <!--step1-->
+      <div class="stepdiv">
+        <div class="stepnostyle">
+          Step 1
+        </div>
+        <div class="stepdescription">
+          <div>LOG ON / REGISTER TO OUR WEBSITE </div>
+          <div><img src="../images/webdraft_05.png" /></div>
+        </div>
+      </div>
+
+      <!--step2-->
+      <div class="stepdiv">
+        <div class="stepnostyle">
+          Step 2
+        </div>
+        <div class="stepdescription">
+          <div>UPDATE / FILL IN YOUR INFORMATION </div>
+          <div><img src="../images/webdraft_09.gif" /></div>
+        </div>
+      </div>
+
+      <!--step3-->
+      <div class="stepdiv">
+        <div class="stepnostyle">
+          Step 3
+        </div>
+        <div class="stepdescription">
+          <div>SELECT YOUR TEMPLATE AND THEMES </div>
+          <div><img src="../images/webdraft_13.png" /></div>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div style="float:left;background-color:#77c8c6;width:100%;height:300px">
+
+    </div>
+    <!--body div end-->
 
         <!-- </div>-->
       <!-- </div>-->
     <!-- </div>-->
-
+<!--
     <div class="container">
     <div ng-view=""></div>
     </div>
@@ -69,7 +103,7 @@
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
-
+-->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
@@ -111,16 +145,11 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/fe/clients/index.js"></script>
-        <script src="scripts/controllers/fe/clients/new.js"></script>
         <script src="scripts/controllers/fe/clients/edit.js"></script>
         <script src="scripts/controllers/fe/experiences/index.js"></script>
         <script src="scripts/controllers/fe/experiences/edit.js"></script>
-        <script src="scripts/controllers/fe/experiences/new.js"></script>
         <script src="scripts/controllers/admin/client.js"></script>
-        <script src="scripts/services/client_service.js"></script>
         <script src="scripts/factories/client_factory.js"></script>
-        <script src="scripts/factories/experience_factory.js"></script>
-        <script src="scripts/factories/location_factory.js"></script>
         <!-- endbuild -->
 
   <!--mobile nav-->
