fixing link adding datepicker

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/nav-bar2.css">
+    <link rel="stylesheet" href="styles/jquery-ui.css">
     <!-- endbuild -->
   </head>
   <body ng-app="gocvApp">
@@ -101,6 +102,7 @@
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/foundation-datepicker/js/foundation-datepicker.js"></script>
+    <script src="../bower_components/jquery/jquery-ui.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
