--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,7 @@
       <!-- </div>-->
     <!-- </div>-->
 
-    <div class="container">
+    <div class="stepshost">
     <div ng-view=""></div>
     </div>
 
