master:css change

--- a/app/indextest.html
+++ b/app/indextest.html
@@ -72,7 +72,7 @@
       </div>
 
       <!--step3-->
-      <div class="stepdiv">
+      <div class="stepdiv"  style="border-bottom: 0px none">
         <div class="stepnostyle">
           Step 3
         </div>
