master: update jquery datepicker

--- a/app/index.html
+++ b/app/index.html
@@ -102,7 +102,8 @@
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/foundation-datepicker/js/foundation-datepicker.js"></script>
-    <script src="../bower_components/jquery/jquery-ui.js"></script>
+    <script src="bower_components/jquery/jquery-ui.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
 
