--- a/app/index.html
+++ b/app/index.html
@@ -127,6 +127,7 @@
         <script src="scripts/controllers/admin/client.js"></script>
         <script src="scripts/services/client_service.js"></script>
         <script src="scripts/factories/client_factory.js"></script>
+        <script src="scripts/factories/education_factory.js"></script>
         <script src="scripts/factories/experience_factory.js"></script>
         <script src="scripts/factories/location_factory.js"></script>
         <script src="scripts/directives/navigation.js"></script>
