--- a/app/index.html
+++ b/app/index.html
@@ -122,7 +122,7 @@
         <script src="scripts/controllers/fe/experiences/edit.js"></script>
         <script src="scripts/controllers/fe/experiences/new.js"></script>
         <script src="scripts/controllers/fe/educations/index.js"></script>
-    <!--<script src="scripts/controllers/fe/experiences/edit.js"></script>-->
+        <script src="scripts/controllers/fe/educations/edit.js"></script>
         <script src="scripts/controllers/fe/educations/new.js"></script>
         <script src="scripts/controllers/admin/client.js"></script>
         <script src="scripts/services/client_service.js"></script>
