master : update date format

--- a/app/index.html
+++ b/app/index.html
@@ -103,6 +103,7 @@
     <script src="bower_components/jquery-placeholder/jquery.placeholder.js"></script>
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/foundation-datepicker/js/foundation-datepicker.js"></script>
+    <script src="bower_components/angular-datetime/dist/datetime.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
