master: improves a bit client

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/nav-bar2.css">
     <link rel="stylesheet" href="styles/jquery-ui.css">
+    <link rel="stylesheet" href="styles/responsive-tables.css">
     <!-- endbuild -->
   </head>
   <body ng-app="gocvApp">
@@ -45,7 +46,7 @@
       </div>-->
 
     <nav class="clearfix">
-      <ul class="clearfix">
+      <ul class="nav">
         <li><a href="#">Home</a></li>
         <li><a href="#">How-to</a></li>
         <li><a href="#">Icons</a></li>
@@ -132,6 +133,7 @@
         <script src="scripts/factories/location_factory.js"></script>
         <script src="scripts/styles/navigation.js"></script>
         <script src="scripts/styles/navigationmobile.js"></script>
+        <script src="scripts/styles/responsive-tables.js"></script>
         <!-- endbuild -->
 
   <!--mobile nav-->
