--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/foundation/css/foundation.css" />
+    <link rel="stylesheet" href="bower_components/foundation-datepicker/css/foundation-datepicker.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -16,7 +17,8 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/nav-bar2.css">
     <link rel="stylesheet" href="styles/jquery-ui.css">
-    <link rel="stylesheet" href="styles/responsive-tables.css">
+    <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
+
     <!-- endbuild -->
   </head>
   <body ng-app="gocvApp">
@@ -133,7 +135,7 @@
         <script src="scripts/factories/location_factory.js"></script>
         <script src="scripts/styles/navigation.js"></script>
         <script src="scripts/styles/navigationmobile.js"></script>
-        <script src="scripts/styles/responsive-tables.js"></script>
+
         <!-- endbuild -->
 
   <!--mobile nav-->
