master : implement ng-file-upload

--- a/app/index.html
+++ b/app/index.html
@@ -107,6 +107,7 @@
     <script src="bower_components/foundation/js/foundation.js"></script>
     <script src="bower_components/foundation-datepicker/js/foundation-datepicker.js"></script>
     <script src="bower_components/angular-datetime/dist/datetime.js"></script>
+    <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
