master : create new id to start from scratch

--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
         <script src="scripts/factories/education_factory.js"></script>
         <script src="scripts/factories/experience_factory.js"></script>
         <script src="scripts/factories/location_factory.js"></script>
+        <script src="scripts/factories/scratch_factory.js"></script>
         <script src="scripts/factories/preview.js"></script>
         <script src="scripts/styles/navigation.js"></script>
         <script src="scripts/styles/navigationmobile.js"></script>
