master : use partials

--- a/app/index.html
+++ b/app/index.html
@@ -50,12 +50,12 @@
 
     <nav class="clearfix">
       <ul class="nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="#/">Home</a></li>
         <li><a href="#/clients/scratch">How-to</a></li>
-        <li><a href="#">Icons</a></li>
-        <li><a href="#">Design</a></li>
-        <li><a href="#">Web 2.0</a></li>
-        <li><a href="#">Tools</a></li>
+        <li><a href="#/">Icons</a></li>
+        <li><a href="#/">Design</a></li>
+        <li><a href="#/">Web 2.0</a></li>
+        <li><a href="#/">Tools</a></li>
       </ul>
       <a href="#" id="pull">Menu</a>
     </nav>
@@ -121,6 +121,7 @@
         <!--<script src="scripts/directives/masonry-docs.min.js"></script>-->
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/scratch.js"></script>
         <script src="scripts/controllers/fe/clients/index.js"></script>
         <script src="scripts/controllers/fe/clients/edit.js"></script>
         <script src="scripts/controllers/fe/experiences/index.js"></script>
